Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-19683

QCleanlooksStyle is the only style not drawing checkboxes in QComboBox

XMLWordPrintable

      When a checkable item in a QComboBox popup list is drawn, QCleanlooksStyle is the only style that doesn't paint its checkbox.
      The problem is that it impacts the behavior of the entire widget, it's not just a "style" issue.

      To reproduce:

      int main( int argc, char * argv [] )
      {
        QApplication::setStyle(new QCleanlooksStyle);
        //QApplication::setStyle(new QPlastiqueStyle);
        // QApplication::setStyle(new Q...Style);
        
        QApplication app(argc, argv);
      
        QComboBox combo;
        combo.addItem("foo");
      
        QStandardItem* item = qobject_cast<QStandardItemModel*>(combo.model())->item(0,0);
        item->setCheckable(true);
        item->setCheckState(Qt::Checked);
      
        combo.show();
      
        return app.exec();
      }
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            peppe Giuseppe D'Angelo
            finetjul Julien Finet
            Votes:
            1 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes