BUG: Fix missing checkboxes in qMRMLCheckableNodeComboBox

Due to the Qt issue https://bugreports.qt.io/browse/QTBUG-19683, the
checkable comboboxes do not appear anymore with Qt5.
Overloading the style option SH_ComboBox_Popup from the qSlicerStyle solves
this.

svn-url: http://viewvc.slicer.org/viewvc.cgi/Slicer4?view=revision&revision=26825
git-svn-id: http://svn.slicer.org/Slicer4/trunk@26825 3bd1e089-480b-0410-8dfb-8563597acbee