Base/QTGUI/qSlicerStyle.cxx
@@ -285,6 +285,13 @@ int qSlicerStyle::styleHint(StyleHint hint, const QStyleOption *opt, const QWidg
         res = widget->property("SH_ItemView_ActivateItemOnSingleClick").toBool();
         break;
         }
+    // Overload the SH_ComboBox_Popup option to prevent issue with checkable
+    // combobox. For more details see: https://bugreports.qt.io/browse/QTBUG-19683
+    case QStyle::SH_ComboBox_Popup:
+      {
+      res = 0;
+      break;
+      }
     default:
       res = this->Superclass::styleHint(hint, opt, widget, returnData);
     }
