Libs/MRML/Widgets/qMRMLCheckableNodeComboBox.cxx
@@ -47,10 +47,6 @@ public:
   qMRMLCheckableNodeComboBoxPrivate(qMRMLCheckableNodeComboBox& object);
   virtual ~qMRMLCheckableNodeComboBoxPrivate();
   virtual void init(QAbstractItemModel* model);
-
-#if (QT_VERSION < QT_VERSION_CHECK(5, 0, 0))
-  QStyle* ComboBoxStyle;
-#endif
 };
 
 // -----------------------------------------------------------------------------
@@ -59,20 +55,11 @@ qMRMLCheckableNodeComboBoxPrivate
   : qMRMLNodeComboBoxPrivate(object)
   , q_ptr(&object)
 {
-#if (QT_VERSION < QT_VERSION_CHECK(5, 0, 0))
-  this->ComboBoxStyle = 0;
-#endif
 }
 
 // -----------------------------------------------------------------------------
 qMRMLCheckableNodeComboBoxPrivate::~qMRMLCheckableNodeComboBoxPrivate()
 {
-#if (QT_VERSION < QT_VERSION_CHECK(5, 0, 0))
-  if (this->ComboBoxStyle)
-    {
-    delete this->ComboBoxStyle;
-    }
-#endif
 }
 
 // -----------------------------------------------------------------------------
@@ -81,11 +68,6 @@ void qMRMLCheckableNodeComboBoxPrivate::init(QAbstractItemModel* model)
   Q_Q(qMRMLCheckableNodeComboBox);
 
   this->ComboBox = new ctkCheckableComboBox;
-#if (QT_VERSION < QT_VERSION_CHECK(5, 0, 0))
-  this->ComboBoxStyle = new QPlastiqueStyle();
-  this->ComboBox->setStyle(this->ComboBoxStyle);
-#endif
-
   this->qMRMLNodeComboBoxPrivate::init(model);
 
   q->setAddEnabled(false);
